--- a/settings.json
+++ b/settings.json
@@ -1,83 +1,31 @@
 {
   "title": "Etherpad",
-  "favicon": "favicon.ico",
+  "favicon": null,
   "skinName": "no-skin",
+  "skinVariants": "super-light-toolbar super-light-editor light-background",
   "ip": "0.0.0.0",
   "port": 9001,
-  "showSettingsInAdminPage": true,
+  "showSettingsInAdminPage": false,
+  "cleanup": {
+    "enabled": false,
+    "keepRevisions": 5
+  },
   "dbType": "sqlite",
   "dbSettings": {
-    "filename": "var/etherpad.db"
+    "filename": "var/etherpad.sqlite.db"
   },
-  "defaultPadText" : "Welcome to Etherpad!\n\nThis pad text is synchronized as you type, so that everyone viewing this page sees the same text. This allows you to collaborate seamlessly on documents!\n\nGet involved with Etherpad at http:\/\/etherpad.org\n",
+  "defaultPadText" : "",
   "padOptions": {
     "noColors":         false,
     "showControls":     true,
     "showChat":         true,
     "showLineNumbers":  true,
     "useMonospaceFont": false,
-    "userName":         false,
-    "userColor":        false,
+    "userName":         null,
+    "userColor":        null,
     "rtl":              false,
     "alwaysShowChat":   false,
     "chatAndUsers":     false,
-    "lang":             "en-gb"
-  },
-  "padShortcutEnabled" : {
-    "altF9":     true,
-    "altC":      true,
-    "cmdShift2": true,
-    "delete":    true,
-    "return":    true,
-    "esc":       true,
-    "cmdS":      true,
-    "tab":       true,
-    "cmdZ":      true,
-    "cmdY":      true,
-    "cmdI":      true,
-    "cmdB":      true,
-    "cmdU":      true,
-    "cmd5":      true,
-    "cmdShiftL": true,
-    "cmdShiftN": true,
-    "cmdShift1": true,
-    "cmdShiftC": true,
-    "cmdH":      true,
-    "ctrlHome":  true,
-    "pageUp":    true,
-    "pageDown":  true
-  },
-  "suppressErrorsInPadText": false,
-  "requireSession": false,
-  "editOnly": false,
-  "sessionNoPassword": false,
-  "minify": true,
-  "maxAge": 21600,
-  "abiword": null,
-  "soffice": null,
-  "tidyHtml": null,
-  "allowUnknownFileEnds": true,
-  "requireAuthentication": false,
-  "requireAuthorization": false,
-  "trustProxy": true,
-  "disableIPlogging": false,
-  "automaticReconnectionTimeout": 0,
-  "scrollWhenFocusLineIsOutOfViewport": {
-    "percentage": {
-      "editionAboveViewport": 0,
-      "editionBelowViewport": 0
-    },
-    "duration": 0,
-    "scrollWhenCaretIsInTheLastLineOfViewport": false,
-    "percentageToScrollWhenUserPressesArrowUp": 0
-  },
-  "socketTransportProtocols" : ["xhr-polling", "jsonp-polling", "htmlfile"],
-  "loadTest": false,
-  "exposeVersion": false,
-  "loglevel": "INFO",
-  "logconfig" :
-    { "appenders": [
-        { "type": "console" }
-      ]
-    }
+    "lang":             "ja-JP"
+  }
 }
